@@ -2,6 +2,7 @@
 * Sort by options in GD > Listings widget not updating with post type change - FIXED
 * Hummingbird object cache does not clears feature image cache - FIXED
 * Post distance is not showing rounded value - FIXED
+* Post images slider do not covers full width when only one image to display - FIXED
 
 = 2.1.0.0 =
 * AyeCode UI Bootstrap design - ADDED
